--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@upstash/redis": "^1.36.2",
     "next": "16.1.6",
     "next-auth": "^4.24.13",
+    "openai": "^6.18.0",
     "prisma": "^6.19.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
